--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lunaria</title>
     <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 <body>
     <div id="conteiner"></div>
